# cppbackend

./: README.md
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/data/: config.json
sprint1/problems/final_task/solution/src/: boost_json.cpp  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  request_handler.cpp  request_handler.h  tagged.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt  conanfile.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  main.cpp  model.cpp  model.h  request_handler.h  response.h
sprint2/problems/game_state/solution/: Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_request_handler.h  front_controller.h  main.cpp  model.cpp  model.h  serialization.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/move_players/solution/src/: main.cpp
sprint2/problems/server_logging/solution/src/: front_controller.h  json_loader.cpp  logger.h  main.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: ApiRequestHandler.h  FrontController.h  StaticRequestHandler.cpp  StaticRequestHandler.h  http_server.cpp  http_server.h  main.cpp  serialization.cpp
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/find_return/solution/src/: app.cpp  collision_detector.cpp  model.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: api_handler.h  app.cpp  json_loader.cpp  model.cpp  model.h
sprint3/problems/gen_objects/solution/src/application/: application.h
sprint3/problems/gen_objects/solution/src/application/game/: game.cpp  map.cpp  player.cpp  player.h
sprint3/problems/gen_objects/solution/src/handlers/: api_request_handler.h  front_controller.h
sprint3/problems/gen_objects/solution/src/serialization/: serialization.h
sprint3/problems/gen_objects/solution/src/utility/: loot_type_info.h
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp  htmldecode.h  main.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: gmon.out
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  collision_detector.cpp  collision_detector.h  geom.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  response.h  tagged.h
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: main.cpp
sprint3/problems/static_lib/solution/src/GameModelLib/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/GameModelLib/include/: dog.h  game.h  map.h  utils.h
sprint3/problems/static_lib/solution/src/GameModelLib/src/: dog.cpp  utils.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/tv/solution/src/: controller.h  main.cpp  menu.h  tv.h
sprint3/problems/tv/solution/tests/: google_controller_tests.cpp  google_tv_tests.cpp
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: main.cpp  urldecode.cpp  urldecode.h
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/src/: main.cpp  urlencode.cpp  urlencode.h
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/bookypedia-1/solution/src/: bookypedia.cpp
sprint4/problems/bookypedia-2/solution/src/: bookypedia.h
sprint4/problems/db_of_books/solution/: CMakeLists.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: api_handler.cpp  api_handler.h  collision_detector.cpp  collision_detector.h  connection_engine.h  dog.cpp  dog.h  event_logger.cpp  event_logger.h  game_session.cpp  game_session.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  json_serializer.cpp  json_serializer.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  model_serialization.h  player_tokens.cpp  player_tokens.h  postgres.cpp  postgres.h  request_handler.cpp  request_handler.h  server_exceptions.h  ticker.h  utility_functions.h  utils.h
sprint4/problems/leave_game/solution/tests/: collision_detector_tests.cpp  test_utils.h
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/problems/state_serialization/solution/src/: main.cpp
sprint4/problems/state_serialization/solution/src/GameModelLib/: CMakeLists.txt
sprint4/problems/state_serialization/solution/src/GameModelLib/include/: dog.h  game.h  loot.h  loot_generator.h  map.h  player.h
sprint4/problems/state_serialization/solution/src/GameModelLib/src/: dog.cpp  game.cpp  map.cpp  player.cpp  utils.cpp
sprint4/problems/state_serialization/solution/src/application/: application.cpp  application.h  serialization.cpp  serialization.h
sprint4/problems/state_serialization/solution/src/handlers/: api_request_handler.h
sprint4/problems/state_serialization/solution/src/serialization/: json_loader.cpp  json_serialization.cpp
(+78 files in other folders)
